--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,4 +11,10 @@
     position: relative;
     overflow-x: hidden;
 }
+.app-dark {
+    background-color: black;
+    color: white;
+    position: relative;
+    overflow-x: hidden;
+}
 
